feature: pluginify the ViewpointFactory