@@ -6,10 +6,11 @@ import io.morin.archicode.Fixtures;
 import io.morin.archicode.resource.element.application.*;
 import io.morin.archicode.resource.element.application.System;
 import io.morin.archicode.resource.workspace.Workspace;
-import io.morin.archicode.viewpoint.IngressMetaLinkFinder;
+import io.morin.archicode.viewpoint.MetaLinkFinderForEgress;
 import io.morin.archicode.workspace.WorkspaceFactory;
 import io.quarkus.test.junit.QuarkusTest;
 import jakarta.inject.Inject;
+import java.util.Collections;
 import java.util.Map;
 import java.util.Set;
 import lombok.extern.slf4j.Slf4j;
@@ -18,39 +19,25 @@ import org.junit.jupiter.api.Test;
 
 @QuarkusTest
 @Slf4j
-class IngressMetaLinkFinderTest {
+class MetaLinkFinderForEgressTest {
 
     @Inject
     WorkspaceFactory workspaceFactory;
 
-    @Inject
-    IngressMetaLinkFinder ingressMetaLinkFinder;
+    MetaLinkFinderForEgress metaLinkFinderForEgress = MetaLinkFinderForEgress.builder().build();
 
     @Test
     void shouldFindSameItemLevel() {
-        val modelBuilder = Application.builder();
+        val viewReference = "solution_a.system_a.container_a";
 
-        // solution_a.system_a.container_a -> solution_b.system_b.container_b
-        val relationship = Relationship.builder().destination("solution_b.system_b.container_b").build();
-        val container_a = Container.builder().id("container_a").relationship(relationship).build();
-        val system_a = System.builder().id("system_a").elements(Set.of(container_a)).build();
-        val solution_a = Solution.builder().id("solution_a").elements(Set.of(system_a)).build();
-        val container_b = Container.builder().id("container_b").build();
-        val system_b = System.builder().id("system_b").elements(Set.of(container_b)).build();
-        val solution_b = Solution.builder().id("solution_b").elements(Set.of(system_b)).build();
-        modelBuilder.elements(Set.of(solution_a, solution_b));
+        val rawWorkspace = Workspace.builder().application(Fixtures.createWithEgress().build()).build();
+        val workspace = workspaceFactory.create(rawWorkspace, Collections.emptyMap());
 
-        val model = modelBuilder.build();
-        val rawWorkspace = Workspace.builder().application(model).build();
-        val workspace = workspaceFactory.create(rawWorkspace, Map.of());
+        val metaLinks = metaLinkFinderForEgress.find(workspace, viewReference);
 
-        val metaLinks = ingressMetaLinkFinder.find(workspace, "solution_b.system_b.container_b");
-        log.info("solution_b.system_b.container_b {}", metaLinks);
+        log.info("solution_a.system_a.container_a {}", metaLinks);
         assertEquals(1, metaLinks.size());
-        assertEquals(
-            "solution_a.system_a.container_a",
-            metaLinks.stream().findFirst().orElseThrow().getFromReference()
-        );
+        assertEquals(viewReference, metaLinks.stream().findFirst().orElseThrow().getFromReference());
         assertEquals("solution_b.system_b.container_b", metaLinks.stream().findFirst().orElseThrow().getToReference());
     }
 
@@ -69,9 +56,9 @@ class IngressMetaLinkFinderTest {
 
         val model = modelBuilder.build();
         val rawWorkspace = Workspace.builder().application(model).build();
-        val workspace = workspaceFactory.create(rawWorkspace, Map.of());
+        val workspace = workspaceFactory.create(rawWorkspace, Collections.emptyMap());
 
-        val metaLinks = ingressMetaLinkFinder.find(workspace, "solution_b.system_b.container_b");
+        val metaLinks = metaLinkFinderForEgress.find(workspace, "solution_a.system_a");
         log.info("solution_a.system_a {}", metaLinks);
         assertEquals(1, metaLinks.size());
         assertEquals("solution_a.system_a", metaLinks.stream().findFirst().orElseThrow().getFromReference());
@@ -82,20 +69,22 @@ class IngressMetaLinkFinderTest {
     void shouldFindUpperItemLevel() {
         val modelBuilder = Application.builder();
 
+        val system_b = System.builder().id("system_b").build();
+        val solution_b = Solution.builder().id("solution_b").elements(Set.of(system_b)).build();
+
         // solution_a.system_a.container_a -> solution_b.system_b
         val relationship = Relationship.builder().destination("solution_b.system_b").build();
         val container_a = Container.builder().id("container_a").relationship(relationship).build();
         val system_a = System.builder().id("system_a").elements(Set.of(container_a)).build();
         val solution_a = Solution.builder().id("solution_a").elements(Set.of(system_a)).build();
-        val system_b = System.builder().id("system_b").build();
-        val solution_b = Solution.builder().id("solution_b").elements(Set.of(system_b)).build();
+
         modelBuilder.elements(Set.of(solution_a, solution_b));
 
         val model = modelBuilder.build();
         val rawWorkspace = Workspace.builder().application(model).build();
-        val workspace = workspaceFactory.create(rawWorkspace, Map.of());
+        val workspace = workspaceFactory.create(rawWorkspace, Collections.emptyMap());
 
-        val metaLinks = ingressMetaLinkFinder.find(workspace, "solution_b.system_b");
+        val metaLinks = metaLinkFinderForEgress.find(workspace, "solution_a.system_a.container_a");
         log.info("solution_a.system_a.container_a {}", metaLinks);
         assertEquals(1, metaLinks.size());
         assertEquals(
@@ -106,26 +95,26 @@ class IngressMetaLinkFinderTest {
     }
 
     @Test
-    void shouldNotFindInternalEgress() {
+    void shouldFindInternalEgress() {
         val model = Fixtures.createWithInternalEgress().build();
         val rawWorkspace = Workspace.builder().application(model).build();
-        val workspace = workspaceFactory.create(rawWorkspace, Map.of());
+        val workspace = workspaceFactory.create(rawWorkspace, Collections.emptyMap());
 
-        val metaLinks = ingressMetaLinkFinder.find(workspace, "sol_a.sys_aa");
+        val metaLinks = metaLinkFinderForEgress.find(workspace, "sol_a.sys_aa");
         metaLinks.forEach(metaLink -> log.info("metaLink {}", metaLink));
-        assertEquals(0, metaLinks.size());
+        assertEquals(1, metaLinks.size());
+        assertEquals("sol_a.sys_ab.con_aba", metaLinks.stream().findFirst().orElseThrow().getToReference());
+        assertEquals("sol_a.sys_aa.con_aaa", metaLinks.stream().findFirst().orElseThrow().getFromReference());
     }
 
     @Test
-    void shouldFindInternalIngress() {
+    void shouldNotFindInternalIngress() {
         val model = Fixtures.createWithInternalIngress().build();
         val rawWorkspace = Workspace.builder().application(model).build();
         val workspace = workspaceFactory.create(rawWorkspace, Map.of());
 
-        val metaLinks = ingressMetaLinkFinder.find(workspace, "sol_a.sys_aa");
+        val metaLinks = metaLinkFinderForEgress.find(workspace, "sol_a.sys_aa");
         metaLinks.forEach(metaLink -> log.info("metaLink {}", metaLink));
-        assertEquals(1, metaLinks.size());
-        assertEquals("sol_a.sys_ab.con_aba", metaLinks.stream().findFirst().orElseThrow().getFromReference());
-        assertEquals("sol_a.sys_aa.con_aaa", metaLinks.stream().findFirst().orElseThrow().getToReference());
+        assertEquals(0, metaLinks.size());
     }
 }
